--- a/Menu/about.html
+++ b/Menu/about.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Reyhan Singh</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="canonical" href="https://reyhansingh.in/current-page/">
 </head>
 
 <body>
