--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="Menu/projects.html">Projects</a></li>
                     <li><a href="Menu/contact.html">Contact</a></li>
+                    <li><a href="Menu/acheivments.html">Acheivments</a></li>
                 </ul>
             </nav>
         </div>
