--- a/Menu/contact.html
+++ b/Menu/contact.html
@@ -14,6 +14,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="acheivments.html">Acheivments</a></li>
                 </ul>
             </nav>
         </div>
