--- a/Menu/acheivments.html
+++ b/Menu/acheivments.html
@@ -30,7 +30,7 @@
                 <h3 style="color: var(--accent-color);">
                     Whitehat JR
                 </h3>
-                <img   src="../images/whitehatjr.png" alt="Whitehat JR" class="whitehatjr">
+                <img   src="rolsorstart01/reyhansingh.in/Images/whitehatjr" alt="Whitehat JR" class="whitehatjr">
                 <p>
                     Certified Full Stack Developer from WhiteHat Jr. – Proficiency in core programming, design thinking, and advanced AI app development.
                     Recognized as a "Creator for Life."
