--- a/Menu/projects.html
+++ b/Menu/projects.html
@@ -48,6 +48,19 @@
                     plans.
                 </p>
             </div>
+            <div class="card reveal">
+                <h3>
+                    <a href="https://hqsport.in" target="_blank"
+                        style="color: var(--accent-color);">HqSport</a>
+                </h3>
+                <p>
+                    HQ Sport Lab is Kolkata's #1 rated pickleball facility.
+                    Experience world-class rooftop courts, professional coaching,
+                    and premium amenities in the heart of the city. 
+                    Book your session online for the ultimate sky-high sports experience.
+                </p>
+                <!-- Optional button if needed, otherwise the title link is fine -->
+            </div>
         </div>
     </main>
     <footer>
