--- a/Menu/acheivments.html
+++ b/Menu/acheivments.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
+
 <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acheivments | Reyhan Singh</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="canonical" href="https://reyhansingh.in/current-page/">
 </head>
 
 <body>
     <header>
         <div>
+            <div class="logo">
+                <a href="../index.html">
+                    <img src="../logo.png" alt="Reyhan Singh Logo" id="site-logo">
+                </a>
+            </div>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
@@ -27,15 +34,17 @@
 
             <div class="card reveal">
                 <div class="acheivment1">
-                <h3 style="color: var(--accent-color);">
-                    Whitehat JR
-                </h3>
-                <img   src="../Images/whitehatjr.png" alt="Whitehat JR" class="whitehatjr">
-                <p>
-                    Certified Full Stack Developer from WhiteHat Jr. – Proficiency in core programming, design thinking, and advanced AI app development.
-                    Recognized as a "Creator for Life."
-                </p>
-                <!-- Optional button if needed, otherwise the title link is fine --></div>
+                    <h3 style="color: var(--accent-color);">
+                        Whitehat JR
+                    </h3>
+                    <img src="../Images/whitehatjr.png" alt="Whitehat JR" class="whitehatjr">
+                    <p>
+                        Certified Full Stack Developer from WhiteHat Jr. – Proficiency in core programming, design
+                        thinking, and advanced AI app development.
+                        Recognized as a "Creator for Life."
+                    </p>
+                    <!-- Optional button if needed, otherwise the title link is fine -->
+                </div>
             </div>
         </div>
     </main>
