--- a/Menu/contact.html
+++ b/Menu/contact.html
@@ -3,12 +3,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Reyhan Singh</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="canonical" href="https://reyhansingh.in/current-page/">
 </head>
 
 <body>
     <header>
         <div>
+            <div class="logo">
+                <a href="../index.html">
+                    <img src="../logo.png" alt="Reyhan Singh Logo" id="site-logo">
+                </a>
+            </div>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
