--- a/Menu/projects.html
+++ b/Menu/projects.html
@@ -3,12 +3,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | Reyhan Singh</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="canonical" href="https://reyhansingh.in/current-page/">
 </head>
 
 <body>
     <header>
         <div>
+            <div class="logo">
+                <a href="../index.html">
+                    <img src="../logo.png" alt="Reyhan Singh Logo" id="site-logo">
+                </a>
+            </div>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
@@ -50,13 +56,12 @@
             </div>
             <div class="card reveal">
                 <h3>
-                    <a href="https://hqsport.in" target="_blank"
-                        style="color: var(--accent-color);">HqSport</a>
+                    <a href="https://hqsport.in" target="_blank" style="color: var(--accent-color);">HqSport</a>
                 </h3>
                 <p>
                     HQ Sport Lab is Kolkata's #1 rated pickleball facility.
                     Experience world-class rooftop courts, professional coaching,
-                    and premium amenities in the heart of the city. 
+                    and premium amenities in the heart of the city.
                     Book your session online for the ultimate sky-high sports experience.
                 </p>
                 <!-- Optional button if needed, otherwise the title link is fine -->
