--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Reyhan Singh</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="canonical" href="https://reyhansingh.in/current-page/">
 </head>
 
 <body>
     <header>
         <div>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="logo.png" alt="Reyhan Singh Logo" id="site-logo">
+                </a>
+            </div>
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
