--- a/Menu/contact.html
+++ b/Menu/contact.html
@@ -9,20 +9,29 @@
 
 <body>
     <header>
-        <div>
+        <div class="header-inner">
             <div class="logo">
                 <a href="../index.html">
                     <img src="../logo.png" alt="Reyhan Singh Logo" id="site-logo">
                 </a>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html" class="active">Contact</a></li>
-                    <li><a href="acheivments.html">Acheivments</a></li>
-                </ul>
-            </nav>
+
+            <div class="nav-wrapper">
+                <button class="menu-toggle" aria-label="Toggle Menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+
+                <nav id="nav-menu">
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../Menu/projects.html">Projects</a></li>
+                        <li><a href="../Menu/contact.html">Contact</a></li>
+                        <li><a href="../Menu/acheivments.html">Achievements</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
