--- a/index.html
+++ b/index.html
@@ -12,18 +12,25 @@
 
 <body>
     <header>
-        <div>
+        <div class="header-container">
             <div class="logo">
                 <a href="index.html">
                     <img src="logo.png" alt="Reyhan Singh Logo" id="site-logo">
                 </a>
             </div>
-            <nav>
+
+            <button class="menu-toggle" aria-label="Toggle Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+            <nav id="nav-menu">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="/index.html" class="active">Home</a></li>
                     <li><a href="Menu/projects.html">Projects</a></li>
                     <li><a href="Menu/contact.html">Contact</a></li>
-                    <li><a href="Menu/acheivments.html">Acheivments</a></li>
+                    <li><a href="Menu/acheivments.html">Achievements</a></li>
                 </ul>
             </nav>
         </div>
